<resources>
    <string name="app_name">Ace Restaurant</string>
    <string name="card_image">card image</string>
    <string name="title_activity_ace_maps">Map</string>
    <string name="aboutus_title">Who We Are</string>
    <string name="aboutus_paragraph">Here at Ace Restaurant you, our customers, always come first! We were originally established by         Ace Morgan in 1995.  Ace ran his establishment with only one goal in mind, put smiles on peoples faces!  He did         this producing meals so tasty that his customers continued to return, with SMILES!  Today, we         continue with Ace\'s goal and continue to mix great food with good times!</string>
    <string name="itemIcon">Item Icon</string>
    <string name="about_us_image">about us Image</string>
    <string name="swipe_left">Swipe to see our notables</string>
    <string name="our_notables">Our Notables</string>
    <string name="notables_button">notables button</string>
    <string name="view_our_notables">View Our Notables</string>
    <string name="card_image_icon">card Image</string>
</resources>