<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".AboutUsViewActivity"
    android:id="@+id/aboutus_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ADECCFC5">
    <!-- tools:showIn="@layout/activity_about_us_view"> -->

    <ImageView
        android:id="@+id/aboutus_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/about_us_image"
        android:scaleType="center"
        android:src="@drawable/ace_med_2" />

    <TextView
        android:id="@+id/aboutus_text"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutus_image"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="7sp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/aboutus_paragraph"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutus_text"
        android:backgroundTint="#C1EEE2E2"
        android:backgroundTintMode="screen">

        <TextView
            android:layout_width="318dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/archivo_narrow_bold"
            android:text="@string/view_our_notables"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="51dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#EEDBDB"
            android:contentDescription="@string/notables_button"
            android:onClick="viewNotables"
            app:srcCompat="@drawable/menuaction" />
    </LinearLayout>

</RelativeLayout>